# rss-parser-cxx

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: publish.yaml
include/pc/rss/: Channel.hpp  Enclosure.hpp  Image.hpp  Item.hpp  parser.hpp
include/pc/rss/detail/: RSSNode.hpp  XML.hpp
sample/: CMakeLists.txt
sample/sample-parser/: CMakeLists.txt
sample/sample-parser/src/: main.cxx
test/: CMakeLists.txt
test/src/: main.cxx
